--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %} Login | Tradvo {% endblock %}
+{% load i18n %}
+
+{% block title %} {% trans "Login" %} | Tradvo {% endblock %}
 
 {% block content %}
     {% if errors %}
@@ -15,7 +17,7 @@
             <form action="{% url 'login' %}" method="post">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="username">Username</label>
+                    <label for="username">{% trans "Username" %}</label>
                     {{ form.username }}
                     {% if form.username.errors %}
                         <div class="alert alert-danger">
@@ -26,7 +28,7 @@
                     {% endif %}
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
+                    <label for="password">{% trans "Password" %}</label>
                     {{ form.password }}
                     {% if form.password.errors %}
                         <div class="alert alert-danger">
@@ -36,7 +38,7 @@
                         </div>
                     {% endif %}
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">{% trans "Submit" %}</button>
             </form>
         </div>
     </div>
