--- a/templates/apk_management/update_app.html
+++ b/templates/apk_management/update_app.html
@@ -1,13 +1,15 @@
+{% load i18n %}
+
 <form method="post" enctype="multipart/form-data" action='{% url "update_app" app.pk %}'>
     {% csrf_token %}
     <div class="form-group">
         
-        <label for="id_name">Name</label>
+        <label for="id_name">{% trans "Name" %}</label>
         {{ form.name }}
     </div>
     <div class="form-group">
-        <label for="id_apk_file_path">APK File</label>
+        <label for="id_apk_file_path">{% trans "APK File" %}</label>
         {{ form.apk_file_path }}
     </div>
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 </form>
