--- a/templates/header.html
+++ b/templates/header.html
@@ -1,28 +1,49 @@
-  <!-- As a heading -->
-  <nav class="navbar navbar-light bg-light">
+{% load i18n %}
+{% load l10n %}
+<nav class="navbar navbar-light bg-light">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Tradvo</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href='{% url "home" %}'>Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href='{% url "login" %}'>Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href='{% url "logout" %}'>Logout</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href='{% url "register" %}'>Register</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href='{% url "user-info" %}'> Account </a>
-          </li>
-        </ul>
-      </div>
+        <a class="navbar-brand" href="#">Tradvo</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="{% trans 'Toggle navigation' %}">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href='{% url "home" %}'> {% trans "Home" %} <span class="sr-only">{% trans 'current' %}</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href='{% url "login" %}'> {% trans "Login" %} </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href='{% url "logout" %}'> {% trans "Logout" %} </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href='{% url "register" %}'> {% trans "Register" %} </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href='{% url "user-info" %}'> {% trans "Account" %} </a>
+                </li>
+            </ul>
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="languageDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      {% get_current_language as LANGUAGE_CODE %}
+                      {% if LANGUAGE_CODE == 'en' %}
+                          {% trans "English" %}
+                      {% elif LANGUAGE_CODE == 'fr' %}
+                          {% trans "Français" %}
+                      {% endif %}
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="languageDropdown">
+                      <form method="post" action="{% url 'set_language' %}">
+                          {% csrf_token %}
+                          <input type="hidden" name="next" value="{{ request.path }}">
+                          <button class="dropdown-item" type="submit" name="language" value="en">{% trans "English" %}</button>
+                          <button class="dropdown-item" type="submit" name="language" value="fr">{% trans "Français" %}</button>
+                      </form>
+                  </div>
+              </li>
+          </ul>
+        </div>
     </nav>
-  </nav>
+</nav>
